Add sharing for the backend. Frontend requires to be updated.